add rp metadata test